Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -893,8 +893,8 @@
     //  `;
     //        rc.appendChild(moreBox);
 
-            document.getElementById("reportDate").textContent =
-                new Date().toLocaleString(undefined, { dateStyle: "medium", timeStyle: "short" });
+            //document.getElementById("reportDate").textContent =
+             //   new Date().toLocaleString(undefined, { dateStyle: "medium", timeStyle: "short" });
         }
 
 
@@ -912,3 +912,4 @@
     </script>
 </body>
 </html>
+
