Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -529,13 +529,13 @@
                 det.className = "panel";
                 det.setAttribute("data-group-id", group.id);
                 const editable = !!group.editable;
-                const summery = document.createElement("summary");
-                summary.innerHTML = '
-                   <span class="group-title">${escapeHTML(group.name)}</span>
-                    <span class="collapsed-label">${escapeHTML(group.name)}</span>
-                    <span class="open-label">${escapeHTML(group.name)}</span>
-            ';
-                det.appendChild(summary);
+           //     const summery = document.createElement("summary");
+           //     summary.innerHTML = '
+          //         <span class="group-title">${escapeHTML(group.name)}</span>
+          //          <span class="collapsed-label">${escapeHTML(group.name)}</span>
+          //          <span class="open-label">${escapeHTML(group.name)}</span>
+          //  ';
+            //    det.appendChild(summary);
                 det.innerHTML = `
               <div style="overflow:auto; margin-top:6px">
                 <table>
@@ -882,6 +882,7 @@
     </script>
 </body>
 </html>
+
 
 
 
