--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@
         * {
             box-sizing: border-box
         }
-
+        .collapsed-label{
+            font-size:12px;
+            color:var(--muted);
+            margin-left:4px;
+        }
+        details[open].collapsed-label{
+            display:none
+        }
         body {
             margin: 0;
             background: var(--bg);
@@ -529,14 +536,11 @@
                 det.className = "panel";
                 det.setAttribute("data-group-id", group.id);
                 const editable = !!group.editable;
-           //     const summery = document.createElement("summary");
-           //     summary.innerHTML = '
-          //         <span class="group-title">${escapeHTML(group.name)}</span>
-          //          <span class="collapsed-label">${escapeHTML(group.name)}</span>
-          //          <span class="open-label">${escapeHTML(group.name)}</span>
-          //  ';
-            //    det.appendChild(summary);
                 det.innerHTML = `
+                <summary class="group-header">
+                    <h2>${escapeHTML(group.name)}</h2>
+                    <span class="collapsed-label>(anzeigen)</span>
+                </summary>
               <div style="overflow:auto; margin-top:6px">
                 <table>
                   <thead>
@@ -882,6 +886,7 @@
     </script>
 </body>
 </html>
+
 
 
 
