Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             margin-left:4px;
         }
         details[open].collapsed-label{
-            display:none
+            display:none;
         }
         body {
             margin: 0;
@@ -886,6 +886,7 @@
     </script>
 </body>
 </html>
+
 
 
 
