--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 det.innerHTML = `
                 <summary class="group-header">
                     <h2>${escapeHTML(group.name)}</h2>
-                    <span class="collapsed-label>(anzeigen)</span>
+                    <span class="collapsed-label">(anzeigen)</span>
                 </summary>
               <div style="overflow:auto; margin-top:6px">
                 <table>
@@ -886,6 +886,7 @@
     </script>
 </body>
 </html>
+
 
 
 
