--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             const wrap = document.getElementById("groups");
             wrap.innerHTML = "";
             state.groups.forEach(group => {
-                const det = document.createElement("detail");
+                const det = document.createElement("details");
                 det.open = true;
                 det.className = "panel";
                 det.setAttribute("data-group-id", group.id);
@@ -894,6 +894,7 @@
     </script>
 </body>
 </html>
+
 
 
 
