Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
                 det.innerHTML = `
                 <summary class="group-header">
                     <h2>${escapeHTML(group.name)}</h2>
-                    /*--<span class="group-header">
+                    <!--<span class="group-header">
                         <span class="collapsed-label">(anzeigen)</span>                        
-                    </span>*/
+                    </span>-->
                 </summary>
                 
               <div style="overflow:auto; margin-top:6px">
@@ -902,6 +902,7 @@
     </script>
 </body>
 </html>
+
 
 
 
