Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -551,12 +551,11 @@
                 //det.appendChild(summary);
                 det.innerHTML = `
                 <summary class="group-header">
-                    <h2>
                     <table>
                       <thead>
                           <tr>
-                              <th style="width:200px"><h2>${escapeHTML(group.name)}</h2></th>
-                              <th style="width:200px"><h2>${escapeHTML(group.funkrufname)}</h2></th>
+                              <th style="width:200px">${escapeHTML(group.name)}</h2></th>
+                              <th style="width:200px">${escapeHTML(group.funkrufname)}</h2></th>
                               <th style="width:70px"></th>
                               <th style="width:100px"></th>
                               <th style="width:20px"></th>
@@ -565,7 +564,6 @@
                             </tr>
                         </thead>
                     </table>
-                    </h2>
                     <!--<span class="group-header">
                         <span class="collapsed-label">(anzeigen)</span>                        
                     </span>-->
@@ -574,15 +572,6 @@
               <div style="overflow:auto; margin-top:6px">
                 <table>
                   <thead>
-                  <tr>
-                      <th style="width:200px"><h2>${escapeHTML(group.name)}</h2></th>
-                      <th style="width:200px"><h2>${escapeHTML(group.funkrufname)}</h2></th>
-                      <th style="width:70px"></th>
-                      <th style="width:100px"></th>
-                      <th style="width:20px"></th>
-                      <th style="width:100px"></th>
-                      <th style="width:100px"></th>
-                    </tr>
                     <tr>
                       <th style="width:200px">Fahrzeug</th>
                       <th style="width:200px">Funkrufname</th>
@@ -916,6 +905,7 @@
     </script>
 </body>
 </html>
+
 
 
 
