--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
                     <table>
                       <thead>
                           <tr>
-                              <th style="width:200px">${escapeHTML(group.name)}</h2></th>
-                              <th style="width:200px">${escapeHTML(group.funkrufname)}</h2></th>
+                              <th style="width:200px"><h2>${escapeHTML(group.name)}</h2></th>
+                              <th style="width:200px"><h2>${escapeHTML(group.funkrufname)}</h2></th>
                               <th style="width:70px"></th>
                               <th style="width:100px"></th>
                               <th style="width:20px"></th>
@@ -905,6 +905,7 @@
     </script>
 </body>
 </html>
+
 
 
 
