--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="de">
 <head>
     <meta charset="utf-8" />
@@ -19,6 +19,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="img/icon-180.png">
 
     <style>
+        * {
+            touch-action: manipulation;
+        }
+        button, input {
+            touch-action: manipulation;
+        }
         :root {
             --bg: #0b0f14;
             --panel: #121820;
