index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
   // Kopf
   doc.setFont("helvetica", "bold");
   doc.setFontSize(14);
-  doc.text("🚒 Kräfteübersicht", marginX, y);
+  doc.text("Kräfteübersicht", marginX, y);
   y += 8;
 
   doc.setFont("helvetica", "normal");
