--- a/index.html
+++ b/index.html
@@ -989,44 +989,44 @@
 }
 
 		
-		function saveReportAsPdfVector() {
-  if (!window.jspdf || !window.jspdf.jsPDF) {
-    alert("jsPDF ist nicht geladen.");
-    return;
-  }
-  if (!window.jspdf.jsPDF.API.autoTable) {
-    alert("jsPDF autoTable ist nicht geladen.");
-    return;
-  }
+function saveReportAsPdfVector() {
+  	if (!window.jspdf || !window.jspdf.jsPDF) {
+    	alert("jsPDF ist nicht geladen.");
+    	return;
+  	}
+  	if (!window.jspdf.jsPDF.API.autoTable) {
+    	alert("jsPDF autoTable ist nicht geladen.");
+    	return;
+  	}
 
-  const { jsPDF } = window.jspdf;
-  const doc = new jsPDF({ orientation: "p", unit: "mm", format: "a4" });
+  	const { jsPDF } = window.jspdf;
+  	const doc = new jsPDF({ orientation: "p", unit: "mm", format: "a4" });
 
-  const marginX = 10;
-  let y = 12;
+  	const marginX = 10;
+  	let y = 12;
 
-  // Kopf
-  doc.setFont("helvetica", "bold");
-  doc.setFontSize(14);
-  doc.text("Kräfteübersicht", marginX, y);
-  y += 8;
+  	// Kopf
+  	doc.setFont("helvetica", "bold");
+  	doc.setFontSize(14);
+  	doc.text("Kräfteübersicht", marginX, y);
+  	y += 8;
 
-  doc.setFont("helvetica", "normal");
-  doc.setFontSize(11);
+  	doc.setFont("helvetica", "normal");
+  	doc.setFontSize(11);
 
-  const stichwort = state.stichwort || "-";
-  const datum = formatDateDE(state.einsatzDatum) || "-";
+  	const stichwort = state.stichwort || "-";
+  	const datum = formatDateDE(state.einsatzDatum) || "-";
 
-  doc.text(`Alarmstichwort: ${stichwort}`, marginX, y); y += 6;
-  doc.text(`Einsatzdatum: ${datum}`, marginX, y); y += 6;
+  	doc.text(`Alarmstichwort: ${stichwort}`, marginX, y); y += 6;
+  	doc.text(`Einsatzdatum: ${datum}`, marginX, y); y += 6;
 
-  y += 2;
+ 	y += 2;
 
-  // Tabellen-Daten vorbereiten
-  const head = [["Fahrzeug", "Funkrufname", " ", "Besatzung", "AGT"]];
-  const body = [];
+  	// Tabellen-Daten vorbereiten
+  	const head = [["Fahrzeug", "Funkrufname", " ", "Besatzung", "AGT"]];
+  	const body = [];
 
-  state.groups.forEach(g => {
+  	state.groups.forEach(g => {
     // Gruppenzeile (fett)
     body.push([
       g.name || "",
@@ -1097,7 +1097,21 @@
   doc.text(`Besatzung gesamt: ${t.totalCrew}`, marginX, afterY + 12);
   doc.text(`AGT gesamt: ${t.totalAGT}`, marginX, afterY + 18);
 
-  doc.save(buildPdfFilename());
+  const blob = doc.output("blob");
+  const file = new File([blob], buildPdfFilename(), {
+    type: "application/pdf"
+  });
+
+  if (canSharePdf()) {
+    await navigator.share({
+      files: [file],
+      title: "Einsatzbericht",
+      text: "PDF Einsatzbericht"
+    });
+  } else {
+    // Fallback: normaler Download
+    doc.save(buildPdfFilename());
+  }
 }
 
 
@@ -1109,9 +1123,15 @@
                 { "&": "&amp;", "<": "&lt;", ">": "&gt;", '"': "&quot;", "'": "&#039;" }[c]
             ));
         }
+		function canSharePdf() {
+  return !!navigator.share && navigator.canShare &&
+         navigator.canShare({ files: [new File([], "x.pdf", { type: "application/pdf" })] });
+}
+
 
         /* Initiales Rendern */
         renderAll();
     </script>
 </body>
 </html>
+
